--- a/mystyle.css
+++ b/mystyle.css
@@ -104,3 +104,43 @@ p {
     font-size: 1rem;
     color: white;
 }
+
+
+@media (max-width: 768px) {
+    .post-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .post-container img {
+        width: 100%;
+        margin: 0 0 20px 0;
+    }
+
+    .photo-gallery {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .image-gallery {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .image-container {
+        width: 80%;
+        margin-bottom: 20px;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    p, .post-container p {
+        font-size: 1rem;
+    }
+
+    .title {
+        font-size: 2rem;
+    }
+}
